--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,14 @@ jobs:
           submodules: recursive
           ssh-key: ${{ secrets.SSH_KEY }}
 
+      - uses: webfactory/ssh-agent@v0.5.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }}
+
       - name: Install ${{ runner.os }} Dependencies.
         shell: bash
         run: |
+          ssh-keyscan github.com
           if [ "$RUNNER_OS" == "Linux" ]; then
               sudo apt-get install -y capnproto git-lfs
           elif [ "$RUNNER_OS" == "macOS" ]; then
