--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,8 @@ jobs:
         if: matrix.os != 'windows-2019'
 
       - name: Run ssh-keyscan
-        run: & "C:\\Program Files\\Git\\bin\\sh.exe" -c "ssh-keyscan github.com >> ~/.ssh/known_hosts"
+        run: |
+          & "C:\\Program Files\\Git\\bin\\sh.exe" -c "ssh-keyscan github.com >> ~/.ssh/known_hosts"
         if: matrix.os == 'windows-2019'
 
       - name: Install ${{ runner.os }} Dependencies.
