--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,15 +9,20 @@ on:
   pull_request:
 
 jobs:
+
   backend_bench:
+
     name: Backend Benchmarks
+
     strategy:
       matrix:
         os:
           - ubuntu-20.04
           - macos-10.15
           - windows-2019
+
     runs-on: ${{ matrix.os }}
+
     steps:
 
       - name: Checkout source
@@ -27,16 +32,8 @@ jobs:
           ssh-key: ${{ secrets.SSH_KEY }}
           ssh-strict: false
 
-      - uses: webfactory/ssh-agent@v0.5.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_KEY }}
-
-      - name: Run ssh-keyscan
-        run: ssh-keyscan github.com >> ~/.ssh/known_hosts
-
-      - name: Run ssh-keyscan (for Windows Git cygwin)
+      - name: Setup SSH key for Windows Git LFS
         run: |
-          & "C:\\Program Files\\Git\\bin\\sh.exe" -c "ssh-keyscan github.com >> ~/.ssh/known_hosts"
           & "C:\\Program Files\\Git\\bin\\sh.exe" -c "echo '${{ secrets.SSH_KEY }}' >> ~/.ssh/id_rsa"
         if: matrix.os == 'windows-2019'
 
@@ -54,7 +51,6 @@ jobs:
       - name: Pull Git LFS objects
         run: git lfs pull
         env:
-          GIT_TRACE: 1
           GIT_SSH_COMMAND: ssh -o StrictHostKeyChecking=no
 
       - name: Install stable Rust
@@ -90,8 +86,13 @@ jobs:
         shell: bash
         run: |
           cargo make benches
+
   checks:
+
+    name: Code Quality Checks
+
     runs-on: ubuntu-latest
+
     steps:
 
       - name: Checkout source
@@ -152,17 +153,22 @@ jobs:
           cargo make tests
 
   build:
+
     name: Build Binaries
+
     needs:
       - checks
       - backend_bench
+
     strategy:
       matrix:
         os:
           - ubuntu-20.04
           - macos-10.15
           - windows-2019
+
     runs-on: ${{ matrix.os }}
+
     steps:
 
       - name: Checkout source
@@ -189,6 +195,7 @@ jobs:
           toolchain: stable
           override: true
           components: rustfmt, clippy
+
       - uses: davidB/rust-cargo-make@v1
         with:
           version: '0.32.11'
@@ -202,6 +209,7 @@ jobs:
           key:
             ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{
             hashFiles('conda.yml') }}
+
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: console_pp
