--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,5 +1,6 @@
 [env]
 PYTHON_FILES = { script = ["python utils/glob_python_files.py"] }
+CONDA_ENV = "console_pp"
 
 [config]
 default_to_workspace = false
@@ -7,7 +8,7 @@ default_to_workspace = false
 [tasks.generate-resources]
 script_runner = "@shell"
 script = '''
-conda run -n console_pp pyside2-rcc resources/console_resources.qrc -o src/main/python/console_resources.py
+conda run -n $CONDA_ENV pyside2-rcc resources/console_resources.qrc -o src/main/python/console_resources.py
 '''
 
 [tasks.copy-capnp]
@@ -19,34 +20,34 @@ cp src/main/resources/base/console_backend.capnp console_backend/console_backend
 [tasks.run]
 dependencies = ["copy-capnp", "generate-resources"]
 script = '''
-conda run -n console_pp pip install -e ./console_backend
-conda run -n console_pp fbs run
+conda run -n $CONDA_ENV pip install -e ./console_backend
+conda run -n $CONDA_ENV fbs run
 '''
 
 [tasks.prod-run]
 dependencies = ["copy-capnp", "generate-resources"]
 script = '''
-conda run -n console_pp pip install --force ./console_backend
-conda run -n console_pp fbs run
+conda run -n $CONDA_ENV pip install --force ./console_backend
+conda run -n $CONDA_ENV fbs run
 '''
 
 [tasks.prod-freeze]
 dependencies = ["copy-capnp", "generate-resources"]
 script = '''
-conda run -n console_pp pip install --force ./console_backend
-conda run -n console_pp fbs freeze
+conda run -n $CONDA_ENV pip install --force ./console_backend
+conda run -n $CONDA_ENV fbs freeze
 '''
 
 [tasks.prod-installer]
 dependencies = ["prod-freeze", "remove-negligibles"]
 script = '''
-conda run -n console_pp fbs installer
+conda run -n $CONDA_ENV fbs installer
 '''
 
 [tasks.create-remove-negligibles-file]
 script_runner = "@shell"
 script = '''
-conda run -n console_pp python utils/get_fbs_remove_list.py
+conda run -n $CONDA_ENV python utils/get_fbs_remove_list.py
 '''
 
 [tasks.remove-negligibles.linux]
@@ -65,22 +66,22 @@ bash src/main/fbs/windows-remove-negligibles.sh
 dependencies = ["copy-capnp", "generate-resources"]
 script_runner = "@shell"
 script = '''
-conda run -n console_pp pip install --force ./console_backend
-bash src/main/nuitka/linux.sh
+conda run -n $CONDA_ENV pip install --force ./console_backend
+conda run -n $CONDA_ENV bash src/main/nuitka/linux.sh
 '''
 
 [tasks.prod-nuitka-build.mac]
 dependencies = ["copy-capnp", "generate-resources"]
 script_runner = "@shell"
 script = '''
-conda run -n console_pp pip install --force ./console_backend
-bash src/main/nuitka/mac.sh
+conda run -n $CONDA_ENV pip install --force ./console_backend
+conda run -n $CONDA_ENV bash src/main/nuitka/mac.sh
 '''
 
 [tasks.create-nuitka-script]
 script_runner = "@shell"
 script = '''
-conda run -n console_pp python utils/create_nuitka_script.py
+conda run -n $CONDA_ENV python utils/create_nuitka_script.py
 '''
 
 [tasks.prod-installer.mac]
@@ -120,19 +121,19 @@ args    = ["check"]
 [tasks.python-type-check]
 script_runner = "@shell"
 script = '''
-conda run -n console_pp mypy $PYTHON_FILES
+conda run -n $CONDA_ENV mypy $PYTHON_FILES
 '''
 
 [tasks.python-format-check]
 script_runner = "@shell"
 script = '''
-conda run -n console_pp black --line-length=120 --check --diff $PYTHON_FILES
+conda run -n $CONDA_ENV black --line-length=120 --check --diff $PYTHON_FILES
 '''
 
 [tasks.python-format-all]
 script_runner = "@shell"
 script = '''
-conda run -n console_pp black --line-length=120 $PYTHON_FILES
+conda run -n $CONDA_ENV black --line-length=120 $PYTHON_FILES
 '''
 
 [tasks.python-format]
@@ -141,7 +142,7 @@ alias="python-format-all"
 [tasks.python-lint]
 script_runner = "@shell"
 script = '''
-conda run -n console_pp pylint --output-format=parseable $PYTHON_FILES
+conda run -n $CONDA_ENV pylint --output-format=parseable $PYTHON_FILES
 '''
 
 [tasks.format-all]
@@ -170,7 +171,7 @@ args    = ["bench", "--all-features", "--", "--verbose", "--noplot"]
 [tasks.bench-rust-validate]
 script_runner = "@shell"
 script = '''
-conda run -n console_pp python console_backend/benches/benchmarks.py
+conda run -n $CONDA_ENV python console_backend/benches/benchmarks.py
 '''
 
 [tasks.benches]
