--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,16 +71,6 @@ jobs:
         with:
           version: '0.32.11'
 
-      - name: Cache conda
-        uses: actions/cache@v1
-        env:
-          CACHE_NUMBER: 0
-        with:
-          path: ~/conda_pkgs_dir
-          key:
-            ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{
-            hashFiles('conda.yml') }}
-
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: console_pp
@@ -120,21 +110,10 @@ jobs:
         with:
           version: '0.32.11'
 
-      - name: Cache conda
-        uses: actions/cache@v1
-        env:
-          CACHE_NUMBER: 0
-        with:
-          path: ~/conda_pkgs_dir
-          key:
-            ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{
-            hashFiles('conda.yml') }}
-
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: console_pp
           environment-file: conda.yml
-          use-only-tar-bz2: true
 
       - name: Install Dependencies.
         run: |
@@ -208,28 +187,20 @@ jobs:
         with:
           version: '0.32.11'
 
-      - name: Cache conda
-        uses: actions/cache@v1
-        env:
-          CACHE_NUMBER: 0
-        with:
-          path: ~/conda_pkgs_dir
-          key:
-            ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{
-            hashFiles('conda.yml') }}
-
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: console_pp
           environment-file: conda.yml
-          use-only-tar-bz2: true
+
+      - name: Poetry Install
+        run: |
+          conda run -n console_pp poetry install
 
       - name: Build ${{ runner.os }} Binaries.
         env:
           OS_NAME: ${{ runner.os }}
         shell: bash
         run: |
-          conda run -n console_pp poetry install
           cargo make prod-installer
           bash ./.github/ci-build.sh
           echo "RELEASE_ARCHIVE=$(cat release-archive.filename)" >>$GITHUB_ENV
