[CPP-30]Backend CPU Usage benchmark. (#9)
* Attempting to get benchmarks working.

* Have criterion working.

* [CPP-30]Backend CPU Usage benchmark.

* fix-up windows backend benchmark (#11)

* Responded to review requests and added a failure case for backend benchmark.

* Refactored duplicative code.

Co-authored-by: Jason Mobarak <jason@swift-nav.com>

--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -12,6 +12,11 @@ sbp = { git = "https://github.com/swift-nav/libsbp.git", rev = "986af3f35033a720
 ordered-float = "2.0"
 ndarray = "0.14.0"
 glob = "0.3.0"
+criterion = "0.3.4"
+
+[[bench]]
+name = "benches"
+harness = false
 
 
 [build-dependencies]
@@ -19,4 +24,9 @@ capnpc = "0.14"
 
 [lib]
 name = "console_backend"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "lib"]
+bench = false
+
+[features]
+default = []
+criterion_bench = []
