--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 src/main/fbs/* linguist-vendored
 src/main/nuitka/* linguist-vendored
+console_backend/benches/data/**/**/*.sbp filter=lfs diff=lfs merge=lfs -text
