--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -204,10 +204,41 @@ jobs:
           cargo make prod-installer
           bash ./.github/ci-build.sh
           echo "RELEASE_ARCHIVE=$(cat release-archive.filename)" >>$GITHUB_ENV
-
+          echo "BENCH_ARCHIVE=$(cat bench.filename)" >>$GITHUB_ENV
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ runner.os }}-artifacts
           path: |
             ${{ env.RELEASE_ARCHIVE }}
             release-archive.filename
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ runner.os }}-artifacts-bench
+          path: |
+            ${{ env.BENCH_ARCHIVE }}
+            bench.filename
+  frontend_bench:
+    name: Run Frontend Benchmarks
+    needs:
+      - build
+    strategy:
+      matrix:
+        os:
+          - Windows
+    runs-on: [self-hosted]
+    steps:
+      - name: Remove previous build.
+        shell: bash
+        run: |
+          rm -rf output
+      - uses: actions/download-artifact@v2
+        with:
+          name: ${{ runner.os }}-artifacts-bench
+          path: |
+            output
+      - name: Extract zip and run bench.
+        run: |
+          cd output
+          7z x $(cat bench.filename) -aoa -o${{ runner.os }}
+          cd ${{ runner.os }}
+          cargo make frontend-bench   
