--- a/Makefile.toml
+++ b/Makefile.toml
@@ -105,7 +105,7 @@ script_runner = "@shell"
 script = '''
 mkdir -p main.app/Contents/MacOS
 cp -r main.dist/* main.app/Contents/MacOS/.
-hdiutil create -volname SwiftNavConsole -srcfolder main.app -ov -format UDZO 'Swift Navigation Console.dmg'
+hdiutil create -volname SwiftNavConsole -srcfolder main.app -ov -format UDZO 'swift_navigation_console.dmg'
 '''
 
 [tasks.rust-format]
@@ -191,3 +191,11 @@ conda run -n $CONDA_ENV python console_backend/benches/benchmarks.py
 
 [tasks.benches]
 dependencies = ["bench-rust", "bench-rust-validate"]
+
+[tasks.frontend-bench.windows]
+command = "python"
+args    = ["benches/frontend_bench.py", "--binary=swift_navigation_console.exe"]
+
+[tasks.frontend-bench]
+command = "python"
+args    = ["benches/frontend_bench.py", "--binary=swift_navigation_console"]
