--- a/Makefile.toml
+++ b/Makefile.toml
@@ -26,10 +26,9 @@ conda run -n $CONDA_ENV fbs run
 '''
 
 [tasks.prod-run]
-dependencies = ["copy-capnp", "generate-resources"]
+dependencies = ["copy-capnp", "generate-resources", "prod-install-backend"]
 script_runner = "@shell"
 script = '''
-conda run -n $CONDA_ENV pip install --force ./console_backend
 conda run -n $CONDA_ENV fbs run
 '''
 
@@ -42,7 +41,7 @@ conda run -n $CONDA_ENV python -m pip install setuptools-rust==0.11.6
 [tasks.prod-install-backend]
 script_runner = "@shell"
 script = '''
-conda run -n $CONDA_ENV python -m pip install --force ./console_backend
+conda run -n $CONDA_ENV python -m pip install -t ./console_backend --upgrade --force ./console_backend -v
 '''
 
 [tasks.prod-freeze]
@@ -52,8 +51,20 @@ script = '''
 conda run -n $CONDA_ENV fbs freeze
 '''
 
+[tasks.copy-console-backend-to-fbs]
+script_runner = "@shell"
+script = '''
+mkdir target/swift_navigation_console/console_backend
+cp -r console_backend/console_backend/*  target/swift_navigation_console/console_backend/.
+'''
+
+[tasks.copy-console-backend-to-fbs.mac]
+script_runner = "@shell"
+script = '''
+'''
+
 [tasks.prod-installer]
-dependencies = ["prod-freeze", "remove-negligibles"]
+dependencies = ["prod-freeze", "remove-negligibles", "copy-console-backend-to-fbs"]
 script_runner = "@shell"
 script = '''
 conda run -n $CONDA_ENV fbs installer
@@ -191,11 +202,3 @@ conda run -n $CONDA_ENV python console_backend/benches/benchmarks.py
 
 [tasks.benches]
 dependencies = ["bench-rust", "bench-rust-validate"]
-
-[tasks.frontend-bench.windows]
-command = "python"
-args    = ["benches/frontend_bench.py", "--binary=swift_navigation_console.exe"]
-
-[tasks.frontend-bench]
-command = "python"
-args    = ["benches/frontend_bench.py", "--binary=swift_navigation_console"]
