Respond to review requests.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -195,5 +195,5 @@ dependencies = ["bench-rust", "bench-rust-validate"]
 [tasks.disk-usage-bench]
 script_runner = "@shell"
 script = '''
-conda run -n $CONDA_ENV python .github/disk_usage_benchmarks.py
+conda run -n $CONDA_ENV python utils/disk_usage_benchmarks.py
 '''
