--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -204,7 +204,7 @@ jobs:
           cargo make prod-installer
           bash ./.github/ci-build.sh
           echo "RELEASE_ARCHIVE=$(cat release-archive.filename)" >>$GITHUB_ENV
-      - name: Build ${{ runner.os }} Binaries.
+      - name: ${{ runner.os }} Installer Size Benchmark.
         env:
           OS_NAME: ${{ runner.os }}
         shell: bash
