Respond to review request. Add continue on error + timeout to frontend benchmarks.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -225,6 +225,8 @@ jobs:
             bench.filename
   frontend_bench:
     name: Run Frontend Benchmarks
+    continue-on-error: true
+    timeout-minutes: 2
     needs:
       - build
     strategy:
