--- a/Makefile.toml
+++ b/Makefile.toml
@@ -202,3 +202,9 @@ conda run -n $CONDA_ENV python console_backend/benches/benchmarks.py
 
 [tasks.benches]
 dependencies = ["bench-rust", "bench-rust-validate"]
+
+[tasks.disk-usage-bench]
+script_runner = "@shell"
+script = '''
+conda run -n $CONDA_ENV python utils/disk_usage_benchmarks.py
+'''
